Fix weird spacing on alert dismissal

--- a/src/app/styles/components/_sidebar-explore.scss
+++ b/src/app/styles/components/_sidebar-explore.scss
@@ -164,6 +164,10 @@
             .alert-container {
                 padding-top: 5px;
             }
+
+            .alert-container:empty {
+                padding-top: 0px;
+            }
         }
         .block-destination {
             height: 160px;
