--- a/src/app/styles/components/_sidebar-route.scss
+++ b/src/app/styles/components/_sidebar-route.scss
@@ -249,16 +249,20 @@
         position: relative;
         height: 100%;
 
+        .alert-container {
+            padding-top: 5px;
+        }
+
+        .alert-container:empty {
+            padding-top: 0px;
+        }
+
         .directions-list {
             height: 100%;
             left: 15px;
             right: 0px;
             top: 0;
             bottom: 0;
-
-            .alert-container {
-                padding-top: 5px;
-            }
         }
         .block-itinerary {
             height: auto;
